# test-automation-framework

./: README.md  pyproject.toml  setup.py
core/: log.py
raddish/: __init__.py  image_search.py  log.py  sandbox.py  search_rectangle.py  text_reader.py  utility.py
raddish/tests/: test.py  test_log.py  test_search_rectangle.py
tests/: test.py
